add category to swagger
