# swagger/swagger.json
@@ -274,6 +274,12 @@
                         "description": "Page size",
                         "name": "pageSize",
                         "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Category",
+                        "name": "category",
+                        "in": "query"
                     }
                 ],
                 "responses": {
